[project]
name = "invoice-reconcile"
version = "1.0.0"
description = "发票到款核对CLI工具 - 支持多命令、本地会话、配置文件、自动匹配、人工复核"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
irec = "invoice_reconcile.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["invoice_reconcile*"]
